--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
     "react": "^18",
