Completing Verification Mail Part 1

--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.1",
+    "resend": "^3.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
