--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.10",
     "@auth/prisma-adapter": "^2.0.0",
     "@prisma/client": "^5.13.0",
+    "ai": "^3.1.5",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "openai": "^4.44.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.1",
