--- a/package.json
+++ b/package.json
@@ -11,18 +11,31 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.10",
     "@auth/prisma-adapter": "^2.0.0",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.13.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "^0.0.17",
     "ai": "^3.1.5",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "openai": "^4.44.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-email": "^2.1.1",
+    "react-email": "^1.10.1",
+    "react-hook-form": "^7.51.4",
     "resend": "^3.2.0",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
